<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:height="20dp"
        android:text="@string/plus"
        android:textSize="25sp" />

    <Button
        android:id="@+id/minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/plus"
        android:height="20dp"
        android:text="@string/minus"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/minus"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="96dp"
        android:text=""
        android:textSize="25sp" />

    <TextView
        android:id="@+id/item_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/item_name"
        android:layout_centerVertical="true"
        android:text="@string/zero"
        android:textSize="25sp" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="35dp"
        android:layout_marginStart="37dp"
        android:text="@string/back" />

    <TextView
        android:id="@+id/del_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/minus"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:text="@string/del_number" />

    <Button
        android:id="@+id/commit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/back"
        android:layout_alignBottom="@+id/back"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="29dp"
        android:text="@string/commit" />
</RelativeLayout>