<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a_tsu.refrigerator.RegisterActivity">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/nutrient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nutrient"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/configuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/configuration"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="26dp"
        android:layout_marginTop="33dp"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:contentDescription="@null" />

    <TextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageButton"
        android:layout_marginStart="35dp"
        android:layout_marginTop="58dp"
        android:text="@string/item_name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/item_name"
        android:layout_below="@+id/item_name"
        android:layout_marginTop="41dp"
        android:text="@string/number"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/number"
        android:layout_below="@+id/number"
        android:layout_marginTop="41dp"
        android:text="@string/category"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/category"
        android:layout_below="@+id/category"
        android:layout_marginTop="43dp"
        android:text="@string/price"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/item_name"
        android:layout_marginStart="18dp"
        android:layout_toEndOf="@+id/item_name"
        android:ems="10"
        android:inputType="text"
        android:maxLines="1"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/number_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/name_edit"
        android:layout_alignTop="@+id/number"
        android:ems="10"
        android:inputType="number"
        android:maxLines="1"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/category_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/number_edit"
        android:layout_alignTop="@+id/category"
        android:ems="10"
        android:inputType="text"
        android:maxLines="1"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/price_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/category_edit"
        android:layout_alignTop="@+id/price"
        android:ems="10"
        android:inputType="number"
        android:maxLines="1"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/price_edit"
        android:layout_toEndOf="@+id/price_edit"
        android:text="@string/yen"
        android:textSize="18sp" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageButton"
        android:layout_below="@+id/price_edit"
        android:layout_marginTop="13dp"
        android:text="@string/next"
        android:textSize="12sp" />

</RelativeLayout>
